# zephyrdb-example

./: .gitignore  CMakeLists.txt  README.md  prj.conf  west.yml
boards/: native_sim.overlay
src/: main.c
